# shopping-crew

./: .env  pyproject.toml  requirements.txt
src/project/: main.py
src/project/crews/shopping_crew/: shopping_crew.py
src/project/crews/shopping_crew/config/: agents.yaml  tasks.yaml
